# dygma_palette

./: README.md  pyproject.toml
dygma_palette/: auxillary_types.py  constants.py  image.py  main.py  restore_palette.py
dygma_palette/dygma/: descriptors.py  keyboard.py  utils.py
dygma_palette/frontend/: desktop.py
dygma_palette/scripts/: restore_palette.py
