[tool.poetry]
name = "dygma-palette"
version = "0.1.0"
description = ""
authors = ["Massimiliano della Rovere <massimiliano.dellarovere@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
pyserial = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
